--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ greenlet==1.1.3.post0
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+passlib==1.7.4
+pcrypt==1.0.5
 pydantic==1.10.2
 python-dotenv==0.21.0
 PyYAML==6.0
